--- a/charts/hdfs-namenode-k8s/values.yaml
+++ b/charts/hdfs-namenode-k8s/values.yaml
@@ -31,14 +31,6 @@ customRunScript: |
 # Size of metadata persistent volume per namenode instance.
 metadataVolumeSize: 100Gi
 
-# Zookeeper quorum to use for determining which namenode instance is active.
-# Separated by the comma character.
-zookeeperQuorum: zk-0.zk-svc.default.svc.cluster.local:2181,zk-1.zk-svc.default.svc.cluster.local:2181,zk-2.zk-svc.default.svc.cluster.local:2181
-
-# Journal nodes quorum to use for sharing editlogs from an active namenode to
-# a standby namenode. Separated by the semicolon character.
-journalQuorum: hdfs-journalnode-0.hdfs-journalnode.default.svc.cluster.local:8485;hdfs-journalnode-1.hdfs-journalnode.default.svc.cluster.local:8485;hdfs-journalnode-2.hdfs-journalnode.default.svc.cluster.local:8485
-
 # Whether or not to enable pinning of namenode pods to labeled k8s cluster nodes.
 namenodePinningEnabled: false
 
@@ -48,16 +40,6 @@ namenodePinningEnabled: false
 # We currently disable this only for CI on minikube.
 hostNetworkEnabled: true
 
-# Custom hadoop config keys passed through env variables to hadoop uhopper images.
-# See https://hub.docker.com/r/uhopper/hadoop/ to get more details
-# Please note that these are not hadoop env variables, but docker env variables that
-# will be transformed into hadoop config keys
-# CLUSTER_NAME is already set by the chart so any value coming from below config
-# will be ignored
-customHadoopConfig: {}
-  # Set variables through a hash where env variable is the key, e.g.
-  # HDFS_CONF_dfs_datanode_use_datanode_hostname: "false"
-
 # Parameters for determining which Unix user and group IDs to use in pods.
 # Persistent volume permission may need to match these.
 podSecurityContext:
@@ -65,12 +47,12 @@ podSecurityContext:
   runAsUser: 0
   fsGroup: 1000
 
+# Name of the k8s config map containing Hadoop config files such as core-site.xml
+# and hdfs-site.xml.
+hdfsConfigMap: hdfs-config
+
 # Whether or not Kerberos support is enabled.
 kerberosEnabled: false
-
-# Required to be non-empty if Kerberos is enabled. Specify your Kerberos realm name.
-# This should match the realm name in your Kerberos config file.
-kerberosRealm: ""
 
 # Effective only if Kerberos is enabled. Name of the k8s config map containing
 # the kerberos config file.
