--- a/charts/hdfs-simple-namenode-k8s/values.yaml
+++ b/charts/hdfs-simple-namenode-k8s/values.yaml
@@ -20,12 +20,6 @@
 # volume.
 nameNodeHostPath: /hdfs-name
 
-# Custom hadoop config keys passed through env variables to hadoop uhopper images.
-# See https://hub.docker.com/r/uhopper/hadoop/ to get more details
-# Please note that these are not hadoop env variables, but docker env variables that
-# will be transformed into hadoop config keys
-# CLUSTER_NAME is already set by the chart so any value coming from below config
-# will be ignored
-customHadoopConfig: {}
-  # Set variables through a hash where env variable is the key, e.g.
-  # HDFS_CONF_dfs_datanode_use_datanode_hostname: "false"
+# Name of the k8s config map containing Hadoop config files such as core-site.xml
+# and hdfs-site.xml.
+hdfsConfigMap: hdfs-config
