--- a/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
+++ b/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
@@ -36,6 +36,16 @@ spec:
               value: /etc/hadoop-custom-conf
             - name: MULTIHOMED_NETWORK
               value: "0"
+            {{- if and .Values.kerberosEnabled .Values.jsvcEnabled }}
+            - name: HADOOP_SECURE_DN_USER
+              value: root
+            - name: JSVC_OUTFILE
+              value: /dev/stdout
+            - name: JSVC_ERRFILE
+              value: /dev/stderr
+            - name: JSVC_HOME
+              value: /jsvc-home
+            {{- end }}
           livenessProbe:
             initialDelaySeconds: 30
             httpGet:
@@ -69,7 +79,7 @@ spec:
               mountPath: /jsvc-home
             {{- end }}
             {{- end }}
-      {{- if and .Values.kerberosEnabled .Values.jsvcEnabled }}
+      {{- if .Values.kerberosEnabled }}
       initContainers:
         - name: copy-kerberos-keytab
           image: busybox:1.27.1
@@ -86,6 +96,7 @@ spec:
               mountPath: /kerberos-keytabs
             - name: kerberos-keytab-copy
               mountPath: /kerberos-keytab-copy
+        {{- if .Values.jsvcEnabled }}
         - name: copy-jsvc
           # Pull by digest because the image doesn't have tags to pin.
           image: mschlimb/jsvc@sha256:bf20eb9a319e9a2f87473d8da7418d21503a97528b932800b6b8417cd31e30ef
@@ -95,6 +106,7 @@ spec:
           volumeMounts:
             - name: jsvc-home
               mountPath: /jsvc-home
+        {{- end }}
       {{- end }}
       affinity:
         nodeAffinity:
