--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -150,11 +150,15 @@ spec:
             # TODO: Check if the https principal is no longer needed in newer
             # Hadoop version.
             - name: HDFS_CONF_dfs_namenode_kerberos_https_principal
-              value: http/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
+              value: HTTP/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
             - name: HDFS_CONF_dfs_web_authentication_kerberos_principal
-              value: http/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
+              value: HTTP/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
             - name: HDFS_CONF_dfs_namenode_keytab_file
               value: /etc/security/hdfs.keytab
+            - name: HDFS_CONF_dfs_journalnode_kerberos_principal
+              value: hdfs/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
+            - name: HDFS_CONF_dfs_journalnode_kerberos_internal_spnego_principal
+              value: HTTP/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
             {{- end }}
             {{- range $key, $value := .Values.customHadoopConfig }}
             - name: {{ $key | quote }}
@@ -223,12 +227,16 @@ spec:
           image: busybox:1.27.1
           command: ['sh', '-c']
           args:
-            - cp /kerberos-keytabs/$MY_NODE_NAME.keytab /kerberos-keytab-copy/hdfs.keytab
+            - cp /kerberos-keytabs/${MY_KERBEROS_NAME}*.keytab /kerberos-keytab-copy/hdfs.keytab
           env:
-            - name: MY_NODE_NAME
+            - name: MY_KERBEROS_NAME
               valueFrom:
                 fieldRef:
+                {{- if .Values.hostNetworkEnabled }}
                   fieldPath: spec.nodeName
+                {{- else }}
+                  fieldPath: metadata.name
+                {{- end }}
           volumeMounts:
             - name: kerberos-keytabs
               mountPath: /kerberos-keytabs
