--- a/uber-chart/values.yaml
+++ b/uber-chart/values.yaml
@@ -52,6 +52,9 @@ global:
   # namenodeHAEnabled is set.
   journalnodeQuorumSize: 3
 
+  # Whether or not to enable affinity setting.
+  affinityEnabled: true
+
   # Whether or not Kerberos support is enabled.
   kerberosEnabled: false
 
