--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -2,9 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hdfs-namenode
+  name: {{ template "hdfs-k8s.namenode.fullname" . }}
   labels:
-    app: hdfs-namenode
+    app: {{ template "hdfs-k8s.name" . }}
+    chart: {{ template "hdfs-k8s.subchart" . }}
+    release: {{ .Release.Name }}
   annotations:
     # TODO: Deprecated. Replace tolerate-unready-endpoints with
     # v1.Service.PublishNotReadyAddresses.
@@ -17,16 +19,20 @@ spec:
     name: http
   clusterIP: None
   selector:
-    app: hdfs-namenode
+    app: {{ template "hdfs-k8s.namenode.fullname" . }}
 ---
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  name: hdfs-namenode
+  name: {{ template "hdfs-k8s.namenode.fullname" . }}
+  labels:
+    app: {{ template "hdfs-k8s.name" . }}
+    chart: {{ template "hdfs-k8s.subchart" . }}
+    release: {{ .Release.Name }}
 spec:
   selector:
     matchLabels:
-      app: hdfs-namenode
+      app: {{ template "hdfs-k8s.namenode.fullname" . }}
   minAvailable: 1
 ---
 # Provides a number of namenode start scripts that meet different needs.
@@ -34,7 +40,11 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: hdfs-namenode-start-scripts
+  name: {{ template "hdfs-k8s.namenode.fullname" . }}-start-scripts
+  labels:
+    app: {{ template "hdfs-k8s.name" . }}
+    chart: {{ template "hdfs-k8s.subchart" . }}
+    release: {{ .Release.Name }}
 data:
   # A bootstrap script which will start namenode daemons after conducting
   # optional metadata initialization steps. The metadata initialization
@@ -78,17 +88,18 @@ data:
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
-  name: hdfs-namenode
+  name: {{ template "hdfs-k8s.namenode.fullname" . }}
+  labels:
+    app: {{ template "hdfs-k8s.name" . }}
+    chart: {{ template "hdfs-k8s.subchart" . }}
+    release: {{ .Release.Name }}
 spec:
-  serviceName: "hdfs-namenode"
-  # Create a size-2 set. The namenode DNS names will be
-  # hdfs-namenode-0.hdfs-namenode.default.svc.cluster.local
-  # and hdfs-namenode-1.hdfs-namenode.default.svc.cluster.local
+  serviceName: {{ template "hdfs-k8s.namenode.fullname" . }}
   replicas: 2
   template:
     metadata:
       labels:
-        app: hdfs-namenode
+        app: {{ template "hdfs-k8s.namenode.fullname" . }}
     spec:
       {{- if .Values.hostNetworkEnabled }}
       # Use hostNetwork so datanodes connect to namenode without going through an overlay network
@@ -111,7 +122,7 @@ spec:
                   - key: "app"
                     operator: In
                     values:
-                    - hfds-namenode
+                      - {{ template "hdfs-k8s.namenode.fullname" . }}
               topologyKey: "kubernetes.io/hostname"
       {{- end }}
       containers:
@@ -146,16 +157,16 @@ spec:
             - name: hdfs-config
               mountPath: /etc/hadoop-custom-conf
               readOnly: true
-            {{- if .Values.kerberosEnabled }}
+            {{- if .Values.global.kerberosEnabled }}
             - name: kerberos-config
               mountPath: /etc/krb5.conf
-              subPath: {{ .Values.kerberosConfigFileName }}
+              subPath: {{ .Values.global.kerberosConfigFileName }}
               readOnly: true
             - name: kerberos-keytab-copy
               mountPath: /etc/security/
               readOnly: true
             {{- end }}
-      {{- if .Values.kerberosEnabled }}
+      {{- if .Values.global.kerberosEnabled }}
       initContainers:
         - name: copy-kerberos-keytab
           image: busybox:1.27.1
@@ -181,31 +192,31 @@ spec:
       # Pin namenode pods to a set of nodes. You can label your node like below:
       #   $ kubectl label nodes YOUR-NODE hdfs-namenode-selector=hdfs-namenode
       nodeSelector:
-        hdfs-namenode-selector: hdfs-namenode
+        hdfs-namenode-selector: {{ template "hdfs-k8s.namenode.fullname" . }}
       {{- end }}
       restartPolicy: Always
       volumes:
         - name: nn-start
           configMap:
-            name: hdfs-namenode-start-scripts
+            name: {{ template "hdfs-k8s.namenode.fullname" . }}-start-scripts
             defaultMode: 0744
         - name: hdfs-config
           configMap:
-            name: {{ .Values.hdfsConfigMap }}
-        {{- if .Values.kerberosEnabled }}
+            name: {{ template "hdfs-k8s.config.fullname" . }}
+        {{- if .Values.global.kerberosEnabled }}
         - name: kerberos-config
           configMap:
             name: {{ .Values.kerberosConfigMap }}
         - name: kerberos-keytabs
           secret:
-            secretName: {{ .Values.kerberosKeytabsSecret }}
+            secretName: {{ .Values.global.kerberosKeytabsSecret }}
         - name: kerberos-keytab-copy
           emptyDir: {}
         {{- end }}
-      {{- if .Values.podSecurityContext.enabled }}
+      {{- if .Values.global.podSecurityContext.enabled }}
       securityContext:
-        runAsUser: {{ .Values.podSecurityContext.runAsUser }}
-        fsGroup: {{ .Values.podSecurityContext.fsGroup }}
+        runAsUser: {{ .Values.global.podSecurityContext.runAsUser }}
+        fsGroup: {{ .Values.global.podSecurityContext.fsGroup }}
       {{- end }}
   volumeClaimTemplates:
   - metadata:
