--- a/charts/hdfs-journalnode-k8s/values.yaml
+++ b/charts/hdfs-journalnode-k8s/values.yaml
@@ -63,3 +63,4 @@ affinity:
               operator: In
               values:
               - hfds-journalnode
+        topologyKey: "kubernetes.io/hostname"
