Fix readme and default values Add default datanode affinity Add emptyline to the end of journalnode values file Fix namenode readme

--- a/charts/hdfs-datanode-k8s/values.yaml
+++ b/charts/hdfs-datanode-k8s/values.yaml
@@ -66,4 +66,10 @@ namenodeHAEnabled: true
 # Node labels and tolerations for pod assignment
 nodeSelector: {}
 tolerations: []
-affinity: {}
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+          - key: hdfs-datanode-exclude
+            operator: DoesNotExist
